--- a/sass/src/_typography.sass
+++ b/sass/src/_typography.sass
@@ -63,29 +63,33 @@
         line-height: 24px
         letter-spacing: 0.25px
 
-@mixin button
+@mixin tButton
     font-weight: 500
     font-size: 14px
     line-height: 24px
     letter-spacing: 1.25px
+    color: colors.$white
 
-@mixin button-bold
+@mixin tButton-bold
     font-weight: bold
     font-size: 14px
     line-height: 24px
     letter-spacing: 1.25px
+    color: colors.$white
 
 .caption
     font-weight: normal
     font-size: 12px
     line-height: 16px   
-    letter-spacing: 0.4px        
+    letter-spacing: 0.4px
+    color: colors.$text-blue
 
 .discount
     font-weight: 600
     font-size: 10px
     line-height: 16px
     letter-spacing: 0.4px 
+    color: colors.$Primary-color-red
 
 .overline
     font-weight: normal
