--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ html, body {
   font-size: 12px;
   line-height: 16px;
   letter-spacing: 0.4px;
+  color: #858fad;
 }
 
 .discount {
@@ -96,6 +97,7 @@ html, body {
   font-size: 10px;
   line-height: 16px;
   letter-spacing: 0.4px;
+  color: #ff8c66;
 }
 
 .overline {
@@ -121,18 +123,26 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
+header {
+  padding: 0 32px;
+}
 header .container {
-  height: 224px;
+  height: 192px;
   background: url("../img/pattern-circles.svg") no-repeat center center;
 }
 
+main {
+  padding: 0 32px;
+}
 main .container {
   background-color: white;
   padding: 48px;
   box-shadow: 0px 6px 14px -6px rgba(24, 39, 75, 0.12), 0px 10px 32px -4px rgba(24, 39, 75, 0.1);
   border-radius: 8px;
+  overflow: hidden;
 }
 
 .main-header {
@@ -158,11 +168,13 @@ main .container {
   border-radius: 4px;
   -webkit-transition: 0.2s;
   transition: 0.2s;
+  position: relative;
 }
 
 .slider::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
+  position: relative;
   width: 40px;
   height: 40px;
   background: #10d5c2 url("../img/icon-slider.svg") no-repeat center center;
@@ -170,6 +182,7 @@ main .container {
   box-shadow: 0px 8px 28px -6px rgba(16, 213, 194, 0.6), 0px 18px 88px -4px rgba(24, 39, 75, 0.14);
   -webkit-transition: 0.3s;
   transition: 0.3s;
+  z-index: 1;
 }
 .slider::-webkit-slider-thumb:hover {
   cursor: pointer;
@@ -185,6 +198,131 @@ main .container {
   background: #10d5c2 url("../img/icon-slider.svg") no-repeat center center;
   border-radius: 50%;
   box-shadow: 0px 8px 28px -6px rgba(16, 213, 194, 0.6), 0px 18px 88px -4px rgba(24, 39, 75, 0.14);
+  z-index: 1;
+}
+
+.slider:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 8px;
+  width: 50%;
+  background-color: #a5f3eb;
+  border-radius: 4px;
+  z-index: 0;
+}
+
+.plans-container {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  gap: 8px;
+  align-items: center;
+}
+
+.toggle {
+  width: 44px;
+  height: 22px;
+  border-radius: 11px;
+  background-color: #cdd7ee;
+  padding: 3px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+.toggle:hover {
+  background-color: #a5f3eb;
+}
+.toggle .circle {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background-color: white;
+  -webkit-transition: all 0.8s ease;
+  transition: all 0.8s ease;
+}
+.toggle.start {
+  justify-content: flex-start;
+}
+.toggle.end {
+  justify-content: flex-end;
+}
+
+.discount-container {
+  padding: 4px 8px;
+  display: flex;
+  background-color: #feece7;
+  border-radius: 12px;
+  border: 1px solid rgba(255, 140, 102, 0.3);
+}
+
+hr {
+  border: 1px solid #cdd7ee;
+  margin: 24px 0;
+  position: relative;
+  width: 180%;
+  left: -40%;
+}
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+button {
+  background-color: rgba(41, 51, 86, 0.8);
+  height: 40px;
+  padding: 8px 32px;
+  border-radius: 21px;
+  cursor: pointer;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 1.25px;
+  color: white;
+}
+button:hover {
+  background-color: #293356;
+}
+
+.on-mobile {
+  display: none;
+}
+
+@media only screen and (max-width: 580px) {
+  .no-mobile {
+    display: none;
+  }
+
+  .on-mobile {
+    display: inline-block;
+  }
+
+  footer {
+    text-align: center;
+    flex-direction: column;
+    gap: 8px;
+  }
+
+  .main-header {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+  }
+
+  .price.on-mobile {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 16px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
